<resources>
    <!-- FIXME: Apagar hints não utilizados -->
    
	<!-- Generic messages -->
	
	<string name="app_name">Meu Rebanho</string>
	<string name="app_full_name">com.timsoft.meurebanho</string>
    <string name="raw_base_path">/res/raw</string>
	
    <string name="exclusion_confirmation">Confirmação de Exclusão</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Incluir</string>
    <string name="delete">Excluir</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <color name="background">#FFFFFF</color>
    <color name="label_color">#000000</color>
    <string name="action_settings">Configurações</string>
    <string name="menu_settings">Configurações</string>
    
    <!-- Animal related messages -->
    <string name="animals">Animais</string>
    
    <string name="animal_id_label">Número de Identificação:</string>
    <string name="animal_id_hint">Número de Identificação</string>
    <string name="alert_invalid_id">Número de Identificação inválido</string>
    <string name="alert_id_already_used">Número de Identificação já utilizado</string>
    
    <string name="animal_specie_label">Espécie:</string>
    
    <string name="animal_race_label">Raça:</string>
    
    <string name="animal_sex_label">Sexo:</string>
    <string name="male">Macho</string>
    <string name="female">Fêmea</string>
    
    <string name="animal_name_label">Nome:</string>
    <string name="animal_name_hint">Nome</string>
    
    <string name="animal_ear_tag_label">Brinco/Número de Controle:</string>
    <string name="animal_ear_tag_hint">Brinco/Número de Controle</string>
    
    <string name="animal_birth_date_label">Data de nascimento:</string>
    <string name="animal_birth_date_hint">Data de nascimento</string>
    
    <string name="animal_aquisition_date_label">Data de aquisição:</string>
    <string name="animal_aquisition_date_hint">Data de aquisição</string>
    
    <string name="animal_sell_date_label">Data da venda:</string>
    <string name="animal_sell_date_hint">Data da venda</string>
    
    <string name="animal_death_date_label">Data da morte:</string>
    
    <string name="animal_death_reason_label">Motivo da morte:</string>

    <string name="animal_aquisition_value_label">Valor de aquisição:</string>
    <string name="animal_aquisition_value_hint">Valor de aquisição</string>
    
    <string name="animal_sell_value_label">Valor de venda:</string>
    <string name="animal_sell_value_hint">Valor de venda</string>
    
    <string name="animal_father_label">Pai:</string>
    <string name="animal_father_hint">Pai</string>
    
    <string name="animal_mother_label">Mãe:</string>
    <string name="animal_mother_hint">Mãe</string>
    
    <string name="add_animal">Incluir Animal</string>
    <string name="detail_animal">Detalhar Animal</string>
    <string name="edit_animal">Alterar Animal</string>
    <string name="find_animal">Buscar Animal</string>
    <string name="alert_fill_animal_name">Nome do animal deve ser preenchido!</string>
    <string name="confirm_animal_exclusion">Confirma a exclusão do animal?</string>
    
    <!-- Species related messages -->
    <string name="specie_image">Imagem da Espécie</string>
    <string name="specie_not_selected">Espécie não selecionada</string>
    
    <!-- Races related messages -->
    <string name="race_not_selected">Raça não selecionada</string>
    
    <!-- Sex related messages -->
    <string name="sex_not_selected">Sexo não selecionado</string>
    
    <!-- Birth Date related messages -->
    <string name="birth_date_invalid">Data de nascimento inválida</string>
    
    <!-- Aquisition Date related messages -->
    <string name="aquisition_date_invalid">Data de nascimento inválida</string>
    
    <!-- Sell Date related messages -->
    <string name="sell_date_invalid">Data de venda inválida</string>
    
    <!-- Death Date related messages -->
    <string name="death_date_invalid">Data de morte inválida</string>
    
    <!-- Event related messages -->
    <string name="events">Eventos</string>
    <string name="add_event">Incluir Evento</string>
    <string name="edit_event">Editar Evento</string>
    
    <!-- Farm related messages -->
    <string name="farms">Fazendas</string>
    <string name="farm_name_hint">Nome da Fazenda</string>
    <string name="add_farm">Incluir Fazenda</string>
    <string name="edit_farm">Alterar Fazenda</string>
    <string name="alert_fill_farm_name">Nome da Fazenda deve ser preenchido!</string>
    <string name="confirm_farm_exclusion">Confirma a exclusão da fazenda?</string>
    
    <!-- Default Species -->
    <string name="specie_bovine">Bovino</string>
    <string name="specie_caprine">Caprino</string>
    <string name="specie_equine">Equino</string>
    <string name="specie_ovine">Ovino</string>
    <string name="specie_swine">Suíno</string>
    
    <!-- Main activity -->
    <string name="animal_main_available_label">Disponíveis</string>
    <string name="animal_main_sold_label">Vendidos</string>
    <string name="animal_main_death_label">Mortos</string>
    
    <string name="months">Meses</string>
    <string name="animal_picture">Foto</string>
    <string name="image_saved_success">Imagem salva com sucesso</string>

    <string name="camera_not_supported">Não há suporte a câmera no dispositivo</string>
    <string name="take_picture">Tirar foto</string>
    <string name="select_picture">Escolher foto</string>
    
</resources>
