<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- status radio selector -->
    <RadioGroup
        android:id="@+id/radio_group_animal_list_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_animal_list_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animal_main_available_label" />

        <RadioButton
            android:id="@+id/radio_animal_list_sold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animal_main_sold_label" />
        
        <RadioButton
            android:id="@+id/radio_animal_list_dead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animal_main_death_label" />
        
    </RadioGroup>

    <!-- animal list -->
    <ListView
        android:id="@+id/list_animal_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
	<!-- buttons -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ImageButton
            android:id="@+id/button_add_animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/save"
            android:src="@drawable/ic_action_new" />
    </TableRow>
    
</LinearLayout>

